<resources>
    <string name="app_name">BHub AWSM 4.0</string>
    <string name="sync_menu">Sync</string>
    <string name="select_rpd">Select RPD</string>
    <string name="rpd_code">RPD Code</string>
    <string name="this_app_needs_OVERLAY_permission">Permission for OVERLAY</string>
    <string name="this_app_needs_alarm_permission">Permission for Schedule Alarm</string>
    <string name="rpd_case_size">Case size</string>
    <string name="rpd_retailer_select">Select retailer and try again.</string>
    <string name="rpd_stock_pcs">Stock (Pcs)</string>
    <string name="rpd_dash_board">Download Dashboard details and try again.</string>
    <string name="rpd_dash_board_name">RPD Dashboard</string>
    <string name="rpd_communication_name">RPD Communication</string>
    <string name="rpd_header">Retailer Selection</string>
    <string name="spinner_prompt">Select Retailer</string>
    <string name="rpd_address">RPD Address</string>
    <string name="rpd_dashboard">RPD Dashboard</string>
    <string name="rpd_communication">RPD Communication</string>
    <string name="sda_communication">SDA Communication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_un_plan_adhoc">Adhoc Visit</string>
    <string name="menu_my_targets">My Targets</string>
    <string name="menu_db_stock">DB Stock</string>
    <string name="menu_behaviour">Behavior</string>
    <string name="menu_schemes">Schemes</string>
    <string name="menu_visual_aid">Visual Aid</string>
    <string name="menu_digital_product">Digital Product</string>
    <string name="menu_retailers">Retailers</string>
    <string name="spinner_retailer">Select Retailer</string>
    <string name="menu_beat_plan">Beat Plan</string>
    <string name="title_billing_entry">Billing</string>
    <string name="title_billing_browser">Bill Browser</string>
    <string name="do_want_to_delete_retailer_stock">Do you want to delete %1$s ?</string>
    <string name="delete_retailer_stock">Delete %1$s ?</string>
    <string name="please_do_day_end_activity">Please do day end activity for %1$s</string>
    <string name="lbl_main_menu">Main Menu</string>
    <string name="preparing_app">Preparing the app. please wait…</string>
    <string name="app_loading">Loading... </string>
    <string name="posting_sales">Posting Sales Order... </string>
    <string name="alert_sync_cannot_be_performed">Sync cannot be performed. Please check your internet connectivity</string>
    <string name="auth_fail_plz_contact_admin">[%1$s] Authentication failed or user locked, Please contact support team</string>
    <string name="data_conn_lost_during_sync_error_code">[%1$s] Unable to reach server. Please check the data connection and try again</string>
    <string name="techincal_error_plz_contact">[%1$s] Technical error, Please upload log and inform administrator</string>
    <string name="comm_error_server_failed_plz_contact">[%1$s] Communication with server failed with status code 503, Please upload log and inform administrator</string>
    <string name="unknown_error">Unknown error occurred during sync. Please check the log</string>
    <string name="msg_sync_started">Synchronization %1$s started </string>
    <string name="msg_error_sync">%1$s synchronized with errors :  </string>
    <string name="msg_success_sync">%1$s synchronized successfully</string>
    <string name="msg_sync_progress_msg_plz_wait">Synchronization in Progress, Please wait&#8230;</string>
    <string name="msg_success_delete_log">Log deleted successfully</string>
    <string name="msg_success_upload_log">Log uploaded successfully</string>
    <string name="msg_error_upload_log">Error occured while uploading logs to server</string>
    <string name="msg_error_competitor">Error saving competitors</string>
    <string name="autodate_change_msg">Automatic Date and Time is not enabled</string>
    <string name="autodate_change_btn">Enable</string>
    <string name="checking_pemission">Checking location permission please wait…</string>
    <string name="error_first_half">Select 1st Half</string>
    <string name="error_second_half">Select 2nd Half</string>
    <string name="error_full_day">Select full day</string>
    <string name="error_att_remarks">Remarks can\'t be empty</string>
    <string name="error_att_remarks_valid">Please enter valid remarks</string>
    <string name="dialog_day_ended">Day ended</string>
    <string name="dialog_day_started">Day started</string>
    <string name="dialog_day_reset">Day end reset done</string>
    <string name="tv_complete">Day Completed</string>
    <string name="tv_end">End Day</string>
    <string name="tv_start">Start Day</string>
    <string name="menu_start">Start</string>
    <string name="visit_end_not_marked_for_specific_retailer">Visit end not marked for %1$s . Do you want to mark now?</string>
    <string name="approve_title_comments">Comments</string>
    <string name="visit_error_remarks">Remarks is required</string>
    <string name="tvRemarks">Remarks *</string>
    <string name="tvRemarks_not_mandatory">Remarks</string>
    <string name="save">Save</string>
    <string name="salesman_name">Salesman Name</string>
    <string name="distributor_code">Distributor Code</string>
    <string name="distributor_address">Distributor Address</string>
    <string name="product_type">Product Type</string>
    <string name="brand_type">Brand</string>
    <string name="select_retailer">Select Outlet</string>
    <string name="select_state">State</string>
    <string name="beat">Beat</string>
    <string name="select_district">District</string>
    <string name="select_sub_district">Sub-District</string>
    <string name="select_beat">Select Beat</string>
    <string name="select_payment">Select Payment</string>
    <string name="select_distribution">Select Distribution</string>
    <string name="select_product_type">Select Product</string>
    <string name="msg_update_end">Updating end, please wait</string>
    <string name="msg_previous_day_end">Please click yes to update the end for previous day</string>
    <string name="msg_update_previous_day_end">Updating previous day end, please wait</string>
    <string name="msg_reset_day_end">Do you want to reset day end?</string>
    <string name="msg_resetting_day_end">Resetting end, please wait</string>
    <string name="msg_confirm_day_end">Do you want to End the Day?</string>
    <string name="msg_remarks_pending_visit">Please fill the remarks for pending retailer visit</string>
    <string name="alert_plz_enter_remarks">Visit end remarks</string>
    <string name="lbl_full_day">Full Day *</string>
    <string name="lbl_second_day">2nd Half *</string>
    <string name="lbl_half_day">1st Half *</string>
    <string name="title_attendance">Attendance</string>
    <string name="msg_marking_attendance">Marking Attendance, please wait</string>
    <string name="err_msg_concat">%1$s : %2$s</string>
    <string name="lbl_attence_start">Attendance start</string>
    <string name="msg_start_upd_sync_error">Start update sync completed with errors</string>
    <string name="msg_end_upd_sync_error">End update sync completed with errors</string>
    <string name="msg_reset_upd_sync_error">Reset update sync completed with errors</string>
    <string name="msg_remarks">Please enter the remarks</string>
    <string name="msg_exit_attendance">Do you want to exit from attendance?</string>
    <string name="alert_please_start_visit">Please start visit</string>
    <string name="visit_started">Visit started</string>
    <string name="visit_ended">Visit ended</string>
    <string name="marking_visit_end_plz_wait">Marking visit end, please wait</string>
    <string name="marking_visit_start_plz_wait">Marking Visit start, please wait</string>
    <string name="summary_title">Summary</string>
    <string name="retailer_header">Retailer</string>
    <string name="outlet_header">Outlet</string>
    <string name="retailer_selection_error_message">Select Retailer</string>
    <string name="beat_selection_error_message">Select Beat</string>
    <string name="no_req_to_update_sap">No pending requests to update SAP</string>
    <string name="data_conn_lost_during_upload_log_error_code">[%1$s] Unable to reach server. Please check the data connection and try again</string>
    <string name="data_conn_lost_during_sync">Unable to reach server. Please check the data connection and try again</string>
    <string name="internal_error_during_sync">Internal error occurred during sync, Please try again</string>
    <string name="msg_error_occured_during_sync_except">Synchronization completed successfully except</string>
    <string name="do_want_cancel_sync">Do you want to cancel synchronisation?</string>
    <string name="error_sync_msg">Sync took beyond 10 minutes. Please retry again</string>
    <string name="error_sync_upload_msg">Sync taking longer than usual. Please retry again</string>
    <string name="so_filter_manual_selection">Manual Selection</string>
    <string name="so_filter_last_one_month">Last One Month</string>
    <string name="so_filter_last_seven_days">Last Seven Days</string>
    <string name="so_filter_today_and_yesterday">Today and Yesterday</string>
    <string name="so_filter_today">Today</string>
    <string name="so_filter_date_">Order date</string>
    <string name="menu_apply">Apply</string>
    <string name="order_date_start">From Date</string>
    <string name="order_date_end">To Date</string>
    <string name="search">Search…</string>
    <string name="menu_filter">Filter</string>
    <string name="review_menu">Review</string>
    <string name="save_menu">Save</string>
    <string name="next_menu">Next</string>
    <string name="menu_edit">Edit</string>
    <string name="lbl_ord_qty">Ord Qty</string>
    <string name="lbl_pmr_scheme">Pri.Sch%</string>
    <string name="lbl_sec_scheme">Sec Sch Dis%</string>
    <string name="lbl_sec_scheme_amt">Sec.Sch Amt</string>
    <string name="lbl_net_amount">Net Amt</string>
    <string name="lbl_ratio_dis_amount">Sche Amt Ratio</string>
    <string name="lbl_free_dis_amount">Free Qty Dis Amt</string>
    <string name="db_stk_srt_mfd">Sort by MFD</string>
    <string name="db_stk_srt_mrp">Sort by MRP</string>
    <string name="db_stk_srt_rlprice">Sort by Retailer Price</string>
    <string name="db_stk_srt">Sort</string>
    <string name="export_menu">Export</string>
    <string name="import_menu">Import</string>
    <string name="export_datavault_data_menu">Export Data</string>
    <string name="import_datavault_data_menu">Import Data</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="menu_expand_all">Expand All</string>
    <string name="menu_collapse_all">Collapse All</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="passcode_immediately">Immediately</string>
    <string name="passcode_one_min">1 Min</string>
    <string name="passcode_two_min">2 Min</string>
    <string name="passcode_five_min">5 Min</string>
    <string name="passcode_fifteen_min">15 Min</string>
    <string name="passcode_one_hr">1 Hour</string>
    <string name="support_menu">Support</string>
    <string name="support_menu_privacy">Privacy</string>
    <string name="support_menu_terms_service">Terms of service</string>
    <string name="sync_hist">Sync History</string>
    <string name="menu_sync">Sync</string>
    <string name="export_device_log_menu">Export Crash Log</string>
    <string name="init_db_menu">Initialize DB</string>
    <string name="start_factory">Start Factory</string>
    <string name="lbl_check_in">Check In</string>
    <string name="lbl_check_out">Check Out</string>
    <string name="lbl_beats">Routes</string>
    <string name="home1">Home</string>
</resources>