<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        app:showAsAction="collapseActionView"
        android:id="@+id/menu_export_device_log"
        android:orderInCategory="100"
        android:title="@string/export_device_log_menu"/>
    <item
        app:showAsAction="collapseActionView"
        android:visible="false"
        android:orderInCategory="100"
        android:id="@+id/menu_re_init"
        android:title="@string/init_db_menu"/>
    <item
        android:id="@+id/menu_mainmenu_export"
        android:orderInCategory="100"
        android:title="@string/export_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_mainmenu_import"
        android:orderInCategory="100"
        android:title="@string/import_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_exportdatavault"
        android:orderInCategory="100"
        android:title="@string/export_datavault_data_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_importdatavault"
        android:orderInCategory="100"
        android:title="@string/import_datavault_data_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />
</menu>