<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search_item"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/add_bitmap"
        android:title="@string/menu_filter"
        app:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/menu_save"
        android:title="@string/save_menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_review"
        android:title="@string/review_menu"
        app:showAsAction="ifRoom" />

</menu>