<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_mainmenu_export"
        android:orderInCategory="100"
        android:title="@string/export_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_mainmenu_import"
        android:orderInCategory="100"
        android:title="@string/import_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_exportdatavault"
        android:orderInCategory="100"
        android:title="@string/export_datavault_data_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_importdatavault"
        android:orderInCategory="100"
        android:title="@string/import_datavault_data_menu"
        android:visible="false"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/menu_support"
        android:orderInCategory="100"
        android:title="@string/support_menu"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/itemAlerrt"
        android:title="Alerts"
        android:visible="false"
        app:actionLayout="@layout/custom_alert_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemlogout"
        android:title="Logout"
        android:orderInCategory="100"
        android:visible="true"
        app:actionLayout="@layout/custom_alert_icon"
        app:showAsAction="never" />

</menu>