<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search_item"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom"
        android:visible="false"
        tools:ignore="AppCompatResource"/>
    <item
        android:id="@+id/action_sort"
        android:visible="false"
        android:icon="@drawable/ic_action_view_module"
        android:orderInCategory="100"
        android:title="@string/db_stk_srt"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_expand"
                android:orderInCategory="100"
                android:title="@string/menu_expand_all"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/menu_collapse"
                android:orderInCategory="100"
                android:title="@string/menu_collapse_all"
                app:showAsAction="collapseActionView" />
        </menu>
    </item>
</menu>