<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search_item"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom"
        android:visible="false"
        tools:ignore="AppCompatResource"/>
    <item
        app:showAsAction="always"
        android:id="@+id/menu_save"
        android:orderInCategory="100"
        android:title="@string/save_menu"/>
    <item
        app:showAsAction="always"
        android:id="@+id/menu_next"
        android:orderInCategory="100"
        android:title="@string/review_menu"/>
</menu>