<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_search_item"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_add"
        android:title="@string/add"
        app:showAsAction="always"
        tools:ignore="AppCompatResource"/>
    <item
        app:showAsAction="always"
        android:id="@+id/menu_cancel"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/save_menu"/>

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/menu_filter"
        app:showAsAction="always"
        tools:ignore="AppCompatResource"/>

</menu>