<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <!-- <item
         android:id="@+id/menu_back"
         android:orderInCategory="100"
         android:title="@string/back_menu"/>-->

    <item
        app:showAsAction="always"
        android:id="@+id/menu_next"
        android:orderInCategory="100"
        android:title="@string/next_menu"/>

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/add_bitmap"
        android:title="@string/menu_filter"
        app:showAsAction="always"
        tools:ignore="AppCompatResource"/>

    <item
        app:showAsAction="always"
        android:id="@+id/menu_review"
        android:orderInCategory="100"
        android:title="@string/review_menu"/>

    <item
        app:showAsAction="always"
        android:id="@+id/menu_save"
        android:orderInCategory="100"
        android:title="@string/save_menu"/>


</menu>
