<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        app:showAsAction="always"
        android:id="@+id/menu_edit"
        android:orderInCategory="100"
        android:visible="false"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_accept"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/accept"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_reject"
        android:title="@string/reject"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>
</menu>