<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/apply"
        android:orderInCategory="9999"
        android:title="@string/menu_apply"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_search_item"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/menu_filter"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

</menu>