<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PopUpView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical">
    <TextView
        style="@style/Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="@dimen/padding_normal_16"
        android:text="@string/so_filter_date_"
        android:textStyle="bold" />
    <RadioGroup
        android:id="@+id/rgHeader"
        android:paddingLeft="@dimen/padding_normal_16"
        android:paddingRight="@dimen/padding_normal_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbToday"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/padding_normal_16"
            android:paddingBottom="@dimen/padding_normal_16"
            android:layout_height="wrap_content"
            android:theme="@style/RadioButtonDefault"
            android:text="@string/so_filter_today" />

        <RadioButton
            android:id="@+id/rbTodayYesterday"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/padding_normal_16"
            android:paddingBottom="@dimen/padding_normal_16"
            android:theme="@style/RadioButtonDefault"
            android:layout_height="wrap_content"
            android:text="@string/so_filter_today_and_yesterday" />

        <RadioButton
            android:id="@+id/rbLastSeven"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/padding_normal_16"
            android:theme="@style/RadioButtonDefault"
            android:paddingBottom="@dimen/padding_normal_16"
            android:layout_height="wrap_content"
            android:text="@string/so_filter_last_seven_days" />

        <RadioButton
            android:id="@+id/rbLastOneMonth"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/padding_normal_16"
            android:theme="@style/RadioButtonDefault"
            android:paddingBottom="@dimen/padding_normal_16"
            android:layout_height="wrap_content"
            android:text="@string/so_filter_last_one_month" />

        <RadioButton
            android:id="@+id/rbManualSelection"
            android:layout_width="match_parent"
            android:paddingTop="@dimen/padding_normal_16"
            android:paddingBottom="@dimen/padding_normal_16"
            android:theme="@style/RadioButtonDefault"
            android:layout_height="wrap_content"
            android:text="@string/so_filter_manual_selection" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/manualSelect"
        android:paddingLeft="@dimen/padding_normal_16"
        android:paddingRight="@dimen/padding_normal_16"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/padding_normal_16"
        android:paddingBottom="@dimen/padding_normal_16"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_calendar"
            android:hint="@string/order_date_start"
            android:paddingEnd="@dimen/padding_zero_dip"
            android:layout_marginLeft="@dimen/padding_normal_8"
            android:paddingRight="@dimen/padding_three_dip"
            android:paddingStart="@dimen/padding_zero_dip"
            android:textSize="@dimen/util_normal_text_sp" />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_calendar"
            android:hint="@string/order_date_end"
            android:paddingEnd="@dimen/padding_zero_dip"
            android:paddingLeft="@dimen/padding_three_dip"
            android:paddingRight="@dimen/padding_three_dip"
            android:paddingStart="@dimen/padding_zero_dip"
            android:textSize="@dimen/util_normal_text_sp"/>


    </LinearLayout>
</LinearLayout>